--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
   <!--My special thanks to Angela Yu and her complete web development course on Udemy -->
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud_img">
+    <!--<img class="top-cloud" src="images/cloud.png" alt="cloud_img">-->
     <h1>I'm Felipe.</h1>
     <h2>a <span class="pro">pro</span>grammer</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud_img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <!--<img class="bottom-cloud" src="images/cloud.png" alt="cloud_img">-->
+    <img class="top-computer"src="images/computer.png" alt="computer-img">
   </div>
 
   <div class="middle-container">
